--- a/list/낚시TV핼다람.html
+++ b/list/낚시TV핼다람.html
@@ -83,7 +83,7 @@
 
   <script src="../js/data.js"></script>
   <script>
-    const youtuber = "탈골스윙";
+    const youtuber = "낚시TV핼다람";
 
     const monthSelect = document.getElementById("monthSelect");
     const summaryBody = document.querySelector("#summaryTable tbody");
