--- a/list/낚시TV핼다람.html
+++ b/list/낚시TV핼다람.html
@@ -53,7 +53,7 @@
   </style>
 </head>
 <body>
-  <h1>탈골스윙 대시보드</h1>
+  <h1>낚시TV핼다람 대시보드</h1>
 
   <label for="monthSelect">월 선택:</label>
   <select id="monthSelect"></select>
