--- a/list/낚시TV핼다람.html
+++ b/list/낚시TV핼다람.html
@@ -50,6 +50,19 @@
       font-weight: bold;
       margin: 4px 0 5px;
     }
+
+    .detail-tables {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;            /* 테이블 간 간격 */
+      align-items: flex-start;
+    }
+
+    .detail-table {
+      min-width: 300px;     /* 테이블 최소 너비 */
+      flex: 1 1 300px;      /* 자동 줄바꿈을 허용하면서 너비 유지 */
+    }
+
   </style>
 </head>
 <body>
