--- a/list/낚시TV핼다람.html
+++ b/list/낚시TV핼다람.html
@@ -172,7 +172,8 @@
           price = "19,800원";
         }
 
-        title.innerText = `[판매 세부] ${product} / 판매가: 13,200원 (VAT 포함)`;
+        title.innerText = `[판매 세부] ${product} / 판매가: ${price} (VAT 포함)`;
+
         div.appendChild(title);
 
         const table = document.createElement("table");
