--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     document.getElementById("login-form").addEventListener("submit", function (e) {
       e.preventDefault();
       const pw = document.getElementById("password").value.trim();
-      window.location.href = `./list/list.html?name=${encodeURIComponent(pw)}`;
+      window.location.href = `./list.html?name=${encodeURIComponent(pw)}`;
     });
   </script>
 </body>
