--- a/list/list.html
+++ b/list/list.html
@@ -157,7 +157,13 @@
     function renderDetailTables(rows) {
       detailTablesContainer.innerHTML = "";
 
-      const products = [...new Set(rows.map(r => r.product))];
+      // ✅ 우선순위 정렬용 리스트
+      const productPriority = ["마스크", "손등장갑(오른손)", "손등장갑(양손)"];
+
+      // ✅ products 리스트를 우선순위대로 정렬
+      const products = productPriority.filter(p =>
+        rows.some(r => r.product === p)
+      );
 
       products.forEach(product => {
         const productRows = rows.filter(r => r.product === product);
@@ -169,13 +175,16 @@
         title.className = "product-title";
 
         let price = "13,200원";
-        if (product.includes("손등장갑(오른손)")) {
+        if (product === "손등장갑(오른손)") {
           price = "11,000원";
-        } else if (product.includes("손등장갑(양손)")) {
+        } else if (product === "손등장갑(양손)") {
           price = "19,800원";
         }
 
-        title.innerText = `[판매 세부] ${product} / 판매가: ${price} (VAT 포함)`;
+        // ✅ 마스크에만 "[판매 세부]" 붙이기
+        const prefix = product === "마스크" ? "[판매 세부] " : "";
+        title.innerText = `${prefix}${product} / 판매가: ${price} (VAT 포함)`;
+
         div.appendChild(title);
 
         const table = document.createElement("table");
@@ -204,6 +213,7 @@
         detailTablesContainer.appendChild(div);
       });
     }
+
 
     if (months.length > 0) {
       monthSelect.value = months[0];
