--- a/list/list.html
+++ b/list/list.html
@@ -61,10 +61,14 @@
       flex: 1 1 300px;
     }
 
-    /* ✅ 소계 행 스타일 */
+    /* ✅ 소계/합계 행 통일 스타일 */
     tr.total-row {
       background-color: #fff4e0;
       font-weight: bold;
+    }
+
+    tr.total-row td {
+      color: #d14300;
     }
   </style>
 </head>
