--- a/list/list.html
+++ b/list/list.html
@@ -12,23 +12,23 @@
 
     .dashboard-header {
       display: flex;
-      justify-content: space-between;
-      align-items: flex-end;
-      margin-bottom: 20px;
-    }
-
-    .header-left {
-      display: flex;
       flex-direction: column;
+      align-items: flex-start;
+      gap: 6px;
+      margin-bottom: 20px;
     }
 
     h1 {
       margin: 0;
       font-size: 24px;
+      font-weight: bold;
     }
 
+    .month-selector {
+      font-size: 14px;
+    }
 
-    select {
+    .month-selector select {
       padding: 5px 10px;
       font-size: 14px;
       border: 1px solid #ccc;
@@ -105,12 +105,11 @@
 </head>
 <body>
   <div class="dashboard-header">
-    <div class="header-left">
-      <h1 id="mainTitle">대시보드</h1>
-      <label for="monthSelect">월 선택: 
-        <select id="monthSelect"></select>
-      </label>
-    </div>
+    <h1 id="mainTitle">채널명</h1>
+    <label class="month-selector">
+      월 선택:
+      <select id="monthSelect"></select>
+    </label>
   </div>
 
   <div class="dashboard-container">
