--- a/list/list.html
+++ b/list/list.html
@@ -13,22 +13,27 @@
     .dashboard-header {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: flex-start;  /* 왼쪽 정렬 */
       gap: 6px;
       margin-bottom: 20px;
+    }
+
+    .header-left {
+      display: flex;
+      flex-direction: column;
     }
 
     h1 {
       margin: 0;
       font-size: 24px;
-      font-weight: bold;
     }
 
-    .month-selector {
+    label {
+      margin-top: 8px;
       font-size: 14px;
     }
 
-    .month-selector select {
+    select {
       padding: 5px 10px;
       font-size: 14px;
       border: 1px solid #ccc;
@@ -105,11 +110,12 @@
 </head>
 <body>
   <div class="dashboard-header">
-    <h1 id="mainTitle">채널명</h1>
-    <label class="month-selector">
-      월 선택:
-      <select id="monthSelect"></select>
-    </label>
+    <div class="header-left">
+      <h1 id="mainTitle">대시보드</h1>
+      <label for="monthSelect">월 선택: 
+        <select id="monthSelect"></select>
+      </label>
+    </div>
   </div>
 
   <div class="dashboard-container">
