--- a/list/list.html
+++ b/list/list.html
@@ -13,7 +13,7 @@
     .dashboard-header {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;
+      align-items: flex-start;  /* 왼쪽 정렬 */
       gap: 6px;
       margin-bottom: 20px;
     }
