--- a/list/list.html
+++ b/list/list.html
@@ -30,8 +30,9 @@
     }
 
     label {
-      margin-top: 8px;
-      font-size: 14px;
+      display: block;
+      text-align: left;
+      width: 100%;
     }
 
     select {
