--- a/list/list.html
+++ b/list/list.html
@@ -5,15 +5,26 @@
   <title id="pageTitle">채널 대시보드</title>
   <link rel="stylesheet" href="../css/style.css">
   <style>
+    body,
+    select,
+    option,
+    table,
+    th,
+    td,
+    label,
+    input,
+    button {
+      font-family: Arial, sans-serif;
+    }
+
     body {
-      font-family: sans-serif;
       margin: 20px;
     }
 
     .dashboard-header {
       display: flex;
       flex-direction: column;
-      align-items: flex-start;  /* 왼쪽 정렬 */
+      align-items: flex-start;
       gap: 6px;
       margin-bottom: 20px;
     }
