--- a/list/list.html
+++ b/list/list.html
@@ -5,19 +5,8 @@
   <title id="pageTitle">채널 대시보드</title>
   <link rel="stylesheet" href="../css/style.css">
   <style>
-    body,
-    select,
-    option,
-    table,
-    th,
-    td,
-    label,
-    input,
-    button {
-      font-family: Arial, sans-serif;
-    }
-
     body {
+      font-family: Arial, sans-serif;
       margin: 20px;
     }
 
@@ -47,6 +36,7 @@
     }
 
     select {
+      font-family: Arial, sans-serif;
       padding: 5px 10px;
       font-size: 14px;
       border: 1px solid #ccc;
@@ -68,6 +58,15 @@
       align-items: flex-start;
       overflow-x: auto;
       white-space: nowrap;
+    }
+
+    table,
+    th,
+    td,
+    thead,
+    tbody,
+    tfoot {
+      font-family: Arial, sans-serif;
     }
 
     table {
@@ -234,7 +233,6 @@
         <td class="numeric">${totalAmount.toLocaleString()}</td>
       `;
       tfoot.appendChild(totalRow);
-
       document.getElementById("summaryTable").appendChild(tfoot);
     }
 
